check/testdata/valid-legacy-files/guide.html.markdown
---
subcategory: "Example"
layout: "example"
page_title: "Example Guide"
description: |-
  Example description.
---
<!-- Copyright IBM Corp. 2019, 2026 -->
<!-- SPDX-License-Identifier: MPL-2.0 -->

# Example Guide

Example contents.
