check/testdata/invalid-legacy-files/index_invalid_frontmatter.html.markdown
---
layout: "example"
page_title: "Example Provider"
description: |-
Missing indentation.
---
<!-- Copyright IBM Corp. 2019, 2026 -->
<!-- SPDX-License-Identifier: MPL-2.0 -->

# Example Provider

Example contents.
